--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "For HackerYou's Full Stack Masterclass",
   "main": "gulpfile.js",
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
@@ -20,7 +21,9 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jquery": "^3.2.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
